fixed masthead align to center

--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ side img {
 	.masthead h1 {
 		font-size: 8rem;
 		line-height: 2;
-		text-align: left;
+		text-align: center;
 		padding-left: 4rem;
 	}
 	.mainnav ul {
